--- a/api/templates/default/index.html.twig
+++ b/api/templates/default/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello DefaultController!{% endblock %}
+{% block title %}Mon tamagosaure{% endblock %}
 
 {% block body %}
 <style>
