--- a/api/templates/default/index.html.twig
+++ b/api/templates/default/index.html.twig
@@ -14,7 +14,7 @@
     <img style="width: 15%;" src="/images/dino.jpg" alt="Un mignon tamagosaurus !"><br>
     <p>Faim : <span id="dino-hunger"></span></p>
     <button type="submit" onClick="feed(1)">Donner 1 de nourriture</button>
-    <button type="submit" onClick="resetFood()">Réinitialiser la nourriture</button>
+    <button type="submit" onClick="feed(0, true)">Réinitialiser la nourriture</button>
 </div>
 <script src="/js/api/request.js"></script>
 <script src="/js/tamagosaurus.js"></script>
