Adds just a bit of JS

--- a/api/templates/home/home.html.twig
+++ b/api/templates/home/home.html.twig
@@ -23,6 +23,10 @@
         <button id="login">Se connecter</button>
     </div>
 
+    <div id="testForm" class="formHidden">
+        <p>Test<p>
+    </div>
+
     <script src="/js/api/request.js"></script>
     <script src="/js/home.js"></script>
 </main>
