add la prorieté last_feed sous tamagosaurus

--- a/api/templates/tamagosaurus/show.html.twig
+++ b/api/templates/tamagosaurus/show.html.twig
@@ -5,6 +5,9 @@
 
 {% block body %}
 	<h1>Tamagosaurus</h1>
+	<div>
+		{% include('login/index.html.twig') %}
+	</div>
 
 	<table class="table">
 		<tbody>
