--- a/api/templates/home/eggChoice.html.twig
+++ b/api/templates/home/eggChoice.html.twig
@@ -18,6 +18,12 @@
         </p>
     </div>
 
+    <div class="eggs">
+        {% for i in 0..2 %}
+            <img src ="{{ asset('/build/dinoegg.png/') }}">
+        {% endfor %}
+    </div>
+
     
 </main>
 
