--- a/api/templates/home/home.html.twig
+++ b/api/templates/home/home.html.twig
@@ -20,11 +20,17 @@
 
     <div class="users">
         <button id="register" onClick="openRegister()">S'inscrire</button>
-        <button id="login">Se connecter</button>
+        <button id="login" onClick="openLogin()">Se connecter</button>
     </div>
 
-    <div id="testForm" class="formHidden">
+    <div id="registerForm" class="formHidden">
         <p>Test<p>
+        <button id="cancelRegister" onClick="closeRegister()">X</button>
+    </div>
+
+    <div id="loginForm" class="formHidden">
+        <p>Test<p>
+        <button id="cancelLogin" onClick="closeLogin()">X</button>
     </div>
 
     <script src="/js/api/request.js"></script>
