--- a/api/templates/home/home.html.twig
+++ b/api/templates/home/home.html.twig
@@ -24,12 +24,11 @@
     </div>
 
     <div id="registerForm" class="formHidden">
-        <p>Test<p>
         <button id="cancelRegister" onClick="closeRegister()">X</button>
     </div>
 
     <div id="loginForm" class="formHidden">
-        <p>Test<p>
+        {% include '/login/_form.html.twig' %}
         <button id="cancelLogin" onClick="closeLogin()">X</button>
     </div>
 
