--- a/api/templates/home/home.html.twig
+++ b/api/templates/home/home.html.twig
@@ -28,7 +28,7 @@
     </div>
 
     <div id="loginForm" class="formHidden">
-        {% include '/login/_form.html.twig' %}
+        {{ render(controller('App\\Controller\\LoginController::loginForm')) }}
         <button id="cancelLogin" onClick="closeLogin()">X</button>
     </div>
 
