Adds login form

--- a/api/templates/login/_form.html.twig
+++ b/api/templates/login/_form.html.twig
@@ -1,6 +1,6 @@
 {# To call in a template,
 {{ render(controller(
-    'App\\Controller\\LoginController:loginForm'
+    'App\\Controller\\LoginController::loginForm'
 )) }}
 #}
 {% if error %}
