--- a/api/templates/default/index.html.twig
+++ b/api/templates/default/index.html.twig
@@ -1,22 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Mon tamagosaure{% endblock %}
+{% block title %}Mon Tamagosaure{% endblock %}
 
 {# /*block de stylesheets */ #}
-{% block stylesheets %}
-        {{ parent () }}
-        <style>
-            body { 
-                background-image: url({{ asset("build/images/background-blue-one.png") }});
-                background-size: cover;
-                background-repeat: no-repeat;
-                background-position: center center;
-                width : 428px;
-                max-height: 926px;
-                /*autres priority de l'image de fond*/
-                }
-        </style>
-{% endblock %}
 
 {% block body %}
 {# <img style="width: 50%;" src="/images/background-home.jpg" alt="Le mopnde virtuel des Tamagosaurus!"><br> #}
@@ -27,6 +13,7 @@
 
 <div class="container">
     <h1 class="display-2">Mon premier Tamagosaurus</h1>
+    <div>{{ tamagosauru.name }}</div>
 
     <img class="rounded mx-auto d-block" style="width: 100%;" src="{{ asset('build/images/diplosaure-aquaticus.png') }}" alt="Un mignon Tamagosaurus !"><br>
     
@@ -34,10 +21,10 @@
     <h2>Donnez lui à manger<h2>
     <p class="lead">Nourrissez le chaque jour, vous disposez diverses aliments.</p>
 
-    <button type="submit" class="btn btn-primary" onClick="feed(1)"> Donner 1 de nourriture </button>
-    <button type="submit" class="btn btn-outline-danger" onClick="resetFood()">Réinitialiser la nourriture</button>
-    
+    {% include 'layout/_buttons.html.twig' %}
 </div>
+
 <script src="/js/api/request.js"></script>
 <script src="/js/tamagosaurus.js"></script>
+
 {% endblock %}
