--- a/api/assets/styles/app.scss
+++ b/api/assets/styles/app.scss
@@ -13,6 +13,19 @@ h2 {
     color: #010101;
 }
 
+ .button-eat {  
+  width: 150px;
+ border-radius:30px ;
+-webkit-border-radius:30px ;
+ -moz-border-radius:30px ;
+-ms-border-radius:30px ;
+-o-border-radius:30px ; 
+
+}
+
+.diplosaure-aquaticus{
+    width: 45px;
+}
 
   
 
