--- a/api/assets/styles/app.scss
+++ b/api/assets/styles/app.scss
@@ -32,14 +32,15 @@ h2 {
     color: $primary;
 }
 
-// .button-eat{  
-//     width: 45px;
-//     border-radius:30px ;
-//     -webkit-border-radius:30px ;
-//     -moz-border-radius:30px ;
-//     -ms-border-radius:30px ;
-//     -o-border-radius:30px ;
-// }
+ .button-eat {  
+  width: 150px;
+ border-radius:30px ;
+-webkit-border-radius:30px ;
+ -moz-border-radius:30px ;
+-ms-border-radius:30px ;
+-o-border-radius:30px ; 
+
+}
 
 .diplosaure-aquaticus{
     width: 45px;
