--- a/api/templates/layout/_buttons-option.html.twig
+++ b/api/templates/layout/_buttons-option.html.twig
@@ -1,4 +1,15 @@
+<div>
 
-<button type="submit" class="button-eat" onClick=""><img class="button-eat" src={{ asset('build/images/png') }}></button>
-<button type="submit" class="button-eat" onClick=""><img class="" src={{ asset('build/images/.png') }}></button>
-<button type="submit" class="button-eat" onClick=""><img class="" src={{ asset('build/images/.png') }}></button>
+    <div class="button-eat bg-aqua">
+        <a onClick=""><img src={{ asset('build/images/buttons-eat.png') }}></a>
+    </div>
+
+    <div class="button-checkroom">
+        <a onClick=""><img src={{ asset('build/images/buttons-checkroom.png') }}></a>
+    </div>
+
+    <div class="button-map">
+        <a onClick=""><img src={{ asset('build/images/buttons-map.png') }}></a>
+    </div>
+
+</div>
