--- a/api/templates/default/index.html.twig
+++ b/api/templates/default/index.html.twig
@@ -32,7 +32,7 @@
         <h2>Donnez lui à manger<h2>
         <p class="lead">Nourrissez le chaque jour, vous disposez diverses aliments.</p>
 
-        {# {% include 'layout/_buttons-hunger.html.twig' %} #}
+        {% include 'layout/_buttons-hunger.html.twig' %}
         {% include 'layout/_buttons-option.html.twig' %}
     </div>
 
