added wireframe pages 1, 2, 3, 4

--- a/api/assets/styles/_custom.scss
+++ b/api/assets/styles/_custom.scss
@@ -1,8 +1,7 @@
 /*theme-color*/
-$primary: #fff;
+$tertiary: #fff;
 $secondary: #333E83;
-$tertiary: #E0218A;
-$sucess: #ece5e5;
+$primary: #E0218A;
+$success: #ece5e5;
 
-
-
+$btn-primary: #E0218A;
