--- a/api/assets/styles/app.scss
+++ b/api/assets/styles/app.scss
@@ -1,5 +1,5 @@
-@import '~bootstrap';
 @import "custom";
+@import '~bootstrap';
 
 
 
@@ -24,13 +24,13 @@ body {
     /*autres priority de l'image de fond*/
     }
 
-h1 {
-    color: $primary;
-}
+// h1 {
+//     color: $primary;
+// }
 
-h2 {
-    color: $primary;
-}
+// h2 {
+//     color: $primary;
+// }
 
  .button-eat {  
   width: 150px;
