--- a/api/templates/login/_form.html.twig
+++ b/api/templates/login/_form.html.twig
@@ -1,6 +1,6 @@
 {# To call in a template,
 {{ render(controller(
-    'App\\Controller\\LoginController:loginForm'
+    'App\\Controller\\LoginController::loginForm'
 )) }}
 #}
 {% if error %}
@@ -11,10 +11,12 @@
     <label for="username">Email:</label>
     <input type="text" id="username" name="_username" value="{{ last_username }}">
 
+    <br>
     <label for="password">Password:</label>
     <input type="password" id="password" name="_password">
 
     <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
+    <br>
     <button type="submit">login</button>
 </form>
