--- a/api/assets/styles/app.scss
+++ b/api/assets/styles/app.scss
@@ -7,11 +7,29 @@ body {
     background-image: url('../images/background-blue.png') no-repeat center center fixed;
     background-size: cover;
 
-}
+    /*autres priority de l'image de fond*/
+    }
 
-h2 {
-    color: #010101;
-}
+
+.container {
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;  
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    /*autres priority de l'image de fond*/
+    }
+
+// h1 {
+//     color: $primary;
+// }
+
+// h2 {
+//     color: $primary;
+// }
 
  .button-eat {  
   width: 150px;
