--- a/api/templates/home/birth.html.twig
+++ b/api/templates/home/birth.html.twig
@@ -15,7 +15,10 @@
     {# Ajouter du javascript pour l'effet oeuf cassé #}
         <img src="{{ asset('/build/images/dinoegg.png') }}">
         =>
-        <img style="width: 20%;" src="{{ asset('/build/images/diplosaure-aquaticus.png') }}">    
+        <img style="width: 20%;" src="{{ asset('/build/images/diplosaure-aquaticus.png') }}">
+        
+        <p>Bonjour !<br>Je suis un brachiosaurus, je suis content d'avoir été choisi, il commençait à faire chaud dans cet oeuf !<br>
+        Comment veux-tu m'appeler ?</p>
     </div>
 
     
