--- a/api/templates/home/birth.html.twig
+++ b/api/templates/home/birth.html.twig
@@ -16,9 +16,15 @@
         <img src="{{ asset('/build/images/dinoegg.png') }}">
         =>
         <img style="width: 20%;" src="{{ asset('/build/images/diplosaure-aquaticus.png') }}">
-        
+
         <p>Bonjour !<br>Je suis un brachiosaurus, je suis content d'avoir été choisi, il commençait à faire chaud dans cet oeuf !<br>
         Comment veux-tu m'appeler ?</p>
+    </div>
+
+    <div>
+            {{ render(controller(
+                'App\\Controller\\TamagosaurusController::new'
+            )) }}
     </div>
 
     
