--- a/api/templates/home/birth.html.twig
+++ b/api/templates/home/birth.html.twig
@@ -22,9 +22,12 @@
     </div>
 
     <div>
+            {#}
             {{ render(controller(
                 'App\\Controller\\TamagosaurusController::new'
             )) }}
+            #}
+            <a role="button" class="btn btn-primary" href="{{ path('app_tamagosaurus_new') }}">Next</a>
     </div>
 
     
