--- a/api/templates/base.html.twig
+++ b/api/templates/base.html.twig
@@ -21,11 +21,20 @@
         {% endblock %}
     </head>
     <body>
+
+        {% for category, messages in app.flashes %}
+            {% for message in messages %}
+                <div class="alert alert-{{ category }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endfor %}
+
     
-<main class="container">
-        {% block body %}
-        {% endblock %}
- </main>
+        <main class="container">
+            {% block body %}
+            {% endblock %}
+        </main>
 
     </body>
 </html>
