--- a/api/templates/layout/_buttons-hunger.html.twig
+++ b/api/templates/layout/_buttons-hunger.html.twig
@@ -1,3 +1,3 @@
-<button type="submit" class="btn btn-primary" onClick="feed(1)"> Donner 1 de nourriture </button>
-<button type="submit" class="btn btn-outline-danger" onClick="resetFood()">Réinitialiser la nourriture</button>
-<button type="submit" class="btn" onClick=""><img class="button-eat" src={{ asset('build/images/button.jpg') }}></button>
+<button type="submit" class="btn btn-primary rounded-pill" onClick="feed(1)">Nourrir</button>
+<button type="submit" class="btn btn-outline-danger" onClick="resetFood()">Reset</button>
+{# <button type="submit" class="btn" onClick=""><img class="button-eat" src={{ asset('build/images/button.jpg') }}></button> #}
