--- a/api/templates/layout/_buttons-option.html.twig
+++ b/api/templates/layout/_buttons-option.html.twig
@@ -1,15 +1,13 @@
 <div>
+    <a role="button" href="#" onClick="toggleOptions('options-hunger')" class="btn btn-primary rounded-pill" title="Nourrir le tamagosaure">
+        <img src={{ asset('build/images/buttons-eat.png') }} alt="Nourrir le tamagosaurus">
+    </a>
 
-    <div class="button-eat bg-aqua">
-        <a onClick=""><img src={{ asset('build/images/buttons-eat.png') }}></a>
-    </div>
+    <a role="button" href="#" onClick="toggleOptions('options-clothes')" class="btn btn-primary rounded-pill">
+        <img src={{ asset('build/images/buttons-checkroom.png') }}>
+    </a>
 
-    <div class="button-checkroom">
-        <a onClick=""><img src={{ asset('build/images/buttons-checkroom.png') }}></a>
-    </div>
-
-    <div class="button-map">
-        <a onClick=""><img src={{ asset('build/images/buttons-map.png') }}></a>
-    </div>
-
+    <a role="button" href="#" onClick="toggleOptions('options-locations')" class="btn btn-primary rounded-pill">
+        <img src={{ asset('build/images/buttons-map.png') }}>
+    </a>
 </div>
