--- a/api/assets/styles/app.scss
+++ b/api/assets/styles/app.scss
@@ -45,9 +45,13 @@ body {
     width: 45px;
 }
 
-  
+.element-visible {
+    display: inherit;
+}
 
-
+.element-hidden {
+    display: none;
+}
 
 
 
