moved js files in assets/js

--- a/api/templates/default/index.html.twig
+++ b/api/templates/default/index.html.twig
@@ -52,7 +52,8 @@
         {% include 'layout/_buttons-option.html.twig' %}
     </div>
 
-<script src="/js/api/request.js"></script>
-<script src="/js/tamagosaurus.js"></script>
+<script src="/build/js/api/request.js"></script>
+<script src="/build/js/tamagosaurus.js"></script>
+</body>
 
 {% endblock %}
