implements the dino

--- a/api/templates/default/dino.html.twig
+++ b/api/templates/default/dino.html.twig
@@ -11,7 +11,9 @@
 <div class="example-wrapper">
     <h1>Mon premier tamagosaurus</h1>
 
-    <img style="width: 15%;" src="/images/dino.jpg" alt="Un mignon tamagosaurus !"><br>
+        <div id="dino-render">
+        </div>
+    <br>
     <p>Faim : <span id="dino-hunger"></span></p>
     <button type="submit" onClick="feed(1)">Donner 1 de nourriture</button>
     <button type="submit" onClick="resetFood()">Réinitialiser la nourriture</button>
