ajout images et css

--- a/api/templates/stroll/show.html.twig
+++ b/api/templates/stroll/show.html.twig
@@ -9,10 +9,11 @@
         {{ parent() }}
         <style>
             body {
-                background-image: url({{ asset("build/images/background-blue-one.png") }});
+                background-image: url({{ asset("build/images/park.jpg") }});
                 background-size: cover;
                 background-repeat: no-repeat;
-                background-position: center center;
+          
+        
 
                 /*autres priority de l'image de fond*/
                 }
