--- a/api/assets/styles/app.scss
+++ b/api/assets/styles/app.scss
@@ -6,6 +6,8 @@ body {
     
     background-image: url('../images/background-blue.png') no-repeat center center fixed;
     background-size: cover;
+    background-repeat: no-repeat;
+    
 
     /*autres priority de l'image de fond*/
     }
