--- a/api/templates/layout/_buttons-option.html.twig
+++ b/api/templates/layout/_buttons-option.html.twig
@@ -1,13 +1,13 @@
-<div>
-    <a role="button" href="#" onClick="toggleOptions('options-hunger')" class="btn btn-primary rounded-pill" title="Nourrir le tamagosaure">
+<div class=" d-flex justify-content-center">
+    <a role="button" href="#" onClick="toggleOptions('options-hunger')" class="btn btn-success rounded-pill px-1 mx-6" title="Nourrir le tamagosaure">
         <img src={{ asset('build/images/buttons-eat.png') }} alt="Nourrir le tamagosaurus">
     </a>
 
-    <a role="button" href="#" onClick="toggleOptions('options-clothes')" class="btn btn-primary rounded-pill">
+    <a role="button" href="#" onClick="toggleOptions('options-clothes')" class="btn btn-success rounded-pill px-1">
         <img src={{ asset('build/images/buttons-checkroom.png') }}>
     </a>
 
-    <a role="button" href="#" onClick="toggleOptions('options-locations')" class="btn btn-primary rounded-pill">
+    <a role="button" href="#" onClick="toggleOptions('options-locations')" class="btn btn-success rounded-pill px-1">
         <img src={{ asset('build/images/buttons-map.png') }}>
     </a>
 </div>
