--- a/api/templates/default/dino.html.twig
+++ b/api/templates/default/dino.html.twig
@@ -18,6 +18,6 @@
     <button type="submit" onClick="feed(1)">Donner 1 de nourriture</button>
     <button type="submit" onClick="resetFood()">Réinitialiser la nourriture</button>
 </div>
-<script src="{{asset('build/api/request.js')}}"></script>
-<script src="{{asset('build/tamagosaurus.js')}}"></script>
+<script src="{{asset('build/js/api/request.js')}}"></script>
+<script src="{{asset('build/js/tamagosaurus.js')}}"></script>
 {% endblock %}
