--- a/api/assets/styles/app.scss
+++ b/api/assets/styles/app.scss
@@ -4,7 +4,7 @@
 
 body {
     
-    background-image: url('../images/background-blue.png') no-repeat center center fixed;
+    background-image: url('../images/backgrounds/background-blue-one.png') no-repeat center center fixed;
     background-size: cover;
     background-repeat: no-repeat;
     
