plays random animations at 10 seconds interval

--- a/api/templates/default/index.html.twig
+++ b/api/templates/default/index.html.twig
@@ -33,7 +33,8 @@
         </div>
 
         <img class="rounded mx-auto d-block" style="width: 20%;" src="{{ asset('build/images/dinosaures/diplosaure-aquaticus.png') }}" alt="Un mignon Tamagosaurus !"><br>
-
+        <div id="dino-render">
+        </div>
         <p class="text-success">Faim : <span id="dino-hunger"></span></p>
         <h2 class="text-success h2">Donnez lui à manger<h2>
         <p class="lead text-success">Nourrissez le chaque jour, vous disposez diverses aliments.</p>
