ajout-entité-et-fonds-images

--- a/api/templates/default/index.html.twig
+++ b/api/templates/default/index.html.twig
@@ -9,7 +9,7 @@
         {{ parent() }}
         <style>
             body {
-                background-image: url({{ asset("build/images/background-blue-one.png") }});
+                background-image: url({{ asset("build/images/backgrounds/background-blue-one.png") }});
                 background-size: cover;
                 background-repeat: no-repeat;
                 background-position: center center;
@@ -26,7 +26,7 @@
         <h1 class="display-2 text-success h1 text-center font-poppins">Mon premier Tamagosaurus</h1>
         <div class="text-primary display-1 text-center font-weight-bold">{{ tamagosauru.name }}</div>
 
-        <img class="rounded mx-auto d-block" style="width: 20%;" src="{{ asset('build/images/diplosaure-aquaticus.png') }}" alt="Un mignon Tamagosaurus !"><br>
+        <img class="rounded mx-auto d-block" style="width: 20%;" src="{{ asset('build/images/dinosaures/diplosaure-aquaticus.png') }}" alt="Un mignon Tamagosaurus !"><br>
 
         <p class="text-success">Faim : <span id="dino-hunger"></span></p>
         <h2 class="text-success h2">Donnez lui à manger<h2>
@@ -41,8 +41,10 @@
         </div>
 
         <div id="options-locations" class="element-hidden">
-            <a role="button" href="{{ path('app_stroll_go', { location: 0 }) }}" class="btn btn-primary">Parc</a>
-            <button class="btn btn-primary">Plage</button>
+            {% for location in destinations %}
+            <a role="button" href="{{ path('app_stroll_go', { destination: location.id }) }}" class="btn btn-primary">{{ location.name }}</a>
+            {% endfor %}
+        
         </div>
         {% include 'layout/_buttons-option.html.twig' %}
     </div>
