--- a/api/templates/stroll/show.html.twig
+++ b/api/templates/stroll/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Mon Tamagosaure{% endblock %}
+{% block title %}Promenade {{destination.description}} {% endblock %}
 
 {# /*block de stylesheets */ #}
 
@@ -9,12 +9,10 @@
         {{ parent() }}
         <style>
             body {
-                background-image: url({{ asset("build/images/park.jpg") }});
+                background-image: url("{{ asset( destination.image ) }}");
                 background-size: cover;
                 background-repeat: no-repeat;
           
-        
-
                 /*autres priority de l'image de fond*/
                 }
         </style>
@@ -22,7 +20,7 @@
 
 {% block body %}
 
-<p>Bienvenue à {{destination}} !</p>
+<p>Bienvenue {{destination.description}} !</p>
 
 <p><a role="button" class="btn btn-primary" href="{{ path('app_default') }}">Retour au bercail</a></p>
 
