--- a/api/templates/layout/_buttons-option.html.twig
+++ b/api/templates/layout/_buttons-option.html.twig
@@ -1,13 +1,14 @@
-<div class=" d-flex justify-content-center">
-    <a role="button" href="#" onClick="toggleOptions('options-hunger')" class="btn btn-success rounded-pill px-1 mx-6" title="Nourrir le tamagosaure">
-        <img src={{ asset('build/images/buttons/buttons-eat.png') }} alt="Nourrir le tamagosaurus">
-    </a>
+<div class=" d-flex justify-content-center justify-content">
+    
+        <a role="button" href="#" onClick="toggleOptions('options-hunger')" class="btn btn-success rounded-pill px-1 mr-5 ml-5 neon-effect" title="Nourrir le tamagosaure" style="margin-left: 70px; margin-right: 70px;">
+            <img src={{ asset('build/images/buttons/buttons-eat.png') }} alt="Nourrir le tamagosaurus">
+        </a>
 
-    <a role="button" href="#" onClick="toggleOptions('options-clothes')" class="btn btn-success rounded-pill px-1">
-        <img src={{ asset('build/images/buttons/buttons-checkroom.png') }}>
-    </a>
+        <a role="button" href="#" onClick="toggleOptions('options-clothes')" class="btn btn-success rounded-pill px-1 neon-effect" style="margin-left: 70px; margin-right: 70px;">
+            <img src={{ asset('build/images/buttons/buttons-checkroom.png') }}>
+        </a>
 
-    <a role="button" href="#" onClick="toggleOptions('options-locations')" class="btn btn-success rounded-pill px-1">
-        <img src={{ asset('build/images/buttons/buttons-map.png') }}>
-    </a>
+        <a role="button" href="#" onClick="toggleOptions('options-locations')" class="btn btn-success rounded-pill px-1 neon-effect" style="margin-left: 70px; margin-right: 70px;">
+            <img src={{ asset('build/images/buttons/buttons-map.png') }}>
+        </a>
 </div>
