--- a/api/templates/base.html.twig
+++ b/api/templates/base.html.twig
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {# {<link rel="stylesheet" href="/styles/app.scss"> #}
-        <link rel="stylesheet" href="{{ asset('styles/app.css') }}">
+        <link rel="stylesheet" href="{{ asset('styles/app.scss') }}">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap">
 
 
@@ -37,6 +37,12 @@
             {% block body %}
             {% endblock %}
         </main>
+
+        <footer>
+
+            {% block footer %} {% endblock %}
+
+        </footer>
 
     </body>
 </html>
