--- a/api/templates/login/_form.html.twig
+++ b/api/templates/login/_form.html.twig
@@ -3,6 +3,11 @@
     'App\\Controller\\LoginController::loginForm'
 )) }}
 #}
+{% extends 'base.html.twig' %}
+
+{% block title %}Hello LoginController!{% endblock %}
+
+{% block body %}
 {% if error %}
     <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 {% endif %}
@@ -18,5 +23,7 @@
     <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
     <br>
-    <button type="submit">login</button>
+    <button class="btn-primary" type="submit">login</button>
 </form>
+
+{% endblock %}
