--- a/api/templates/layout/_buttons-option.html.twig
+++ b/api/templates/layout/_buttons-option.html.twig
@@ -1,13 +1,13 @@
 <div class=" d-flex justify-content-center">
-    <a role="button" href="#" onClick="toggleOptions('options-hunger')" class="btn btn-success rounded-pill px-1 mx-6" title="Nourrir le tamagosaure">
+    <button onClick="toggleOptions('options-hunger')" class="btn btn-success rounded-pill px-1 mx-6" title="Nourrir le tamagosaure">
         <img src={{ asset('build/images/buttons/buttons-eat.png') }} alt="Nourrir le tamagosaurus">
-    </a>
+    </button>
 
-    <a role="button" href="#" onClick="toggleOptions('options-clothes')" class="btn btn-success rounded-pill px-1">
+    <button onClick="toggleOptions('options-clothes')" class="btn btn-success rounded-pill px-1">
         <img src={{ asset('build/images/buttons/buttons-checkroom.png') }}>
-    </a>
+    </button>
 
-    <a role="button" href="#" onClick="toggleOptions('options-locations')" class="btn btn-success rounded-pill px-1">
+    <button onClick="toggleOptions('options-locations')" class="btn btn-success rounded-pill px-1">
         <img src={{ asset('build/images/buttons/buttons-map.png') }}>
-    </a>
+    </button>
 </div>
