--- a/api/templates/tamagosaurus/new.html.twig
+++ b/api/templates/tamagosaurus/new.html.twig
@@ -4,9 +4,22 @@
 {% endblock %}
 
 {% block body %}
-	<h1>Donne-moi un prénom</h1>
+	<main>
+		<div class="card col-md-10 mx-auto">
+			<div class="card-header bg-primary">
+				<h1 class="text-white">Tamagosaurus</h1>
+				<h2 class="text-secondary">Excellent choix !</h2>
+			</div>
+			<div class="card-body">
+				<img src="{{ asset('/build/images/eggs/dinoegg.png') }}">
+				=>
+				<img style="width: 20%;" src="{{ asset('/build/images/dinosaures/diplosaure-aquaticus.png') }}">
 
-	{{ include('tamagosaurus/_form.html.twig') }}
+				<p>Bonjour !<br>Je suis un brachiosaurus, je suis content d'avoir été choisi, il commençait à faire chaud dans cet oeuf !</p>
+				<h3>Comment veux-tu m'appeler ?</h3>
 
-	<a href="{{ path('app_tamagosaurus_index') }}">back to list</a>
+				{{ include('tamagosaurus/_form.html.twig') }}
+			</div>
+		</div>
+	</main>
 {% endblock %}
