--- a/api/templates/base.html.twig
+++ b/api/templates/base.html.twig
@@ -25,7 +25,7 @@
     </head>
     <body>
 
-        {% include 'components/_nav.html.twig' %}
+        {% include 'layout/_nav.html.twig' %}
 
         {% for category, messages in app.flashes %}
             {% for message in messages %}
@@ -40,6 +40,12 @@
             {% block body %}
             {% endblock %}
         </main>
+
+        <footer>
+            {% block footer %}
+                {% include 'layout/_footer.html.twig' %}
+            {% endblock %}
+        </footer>
 
     </body>
 </html>
