--- a/api/templates/stroll/show.html.twig
+++ b/api/templates/stroll/show.html.twig
@@ -19,9 +19,12 @@
 {% endblock %}
 
 {% block body %}
-
 <p>Bienvenue {{destination.description}} !</p>
 
-<p><a role="button" class="btn btn-primary" href="{{ path('app_default') }}">Retour au bercail</a></p>
-
+<p>
+        <a role="button" class="btn btn-primary" href="{{ path('app_tamagosaurus_index') }}">
+                <img src="{{ asset('build/images/icons/home/home-icon-white.png') }}"><br>
+                Retour au bercail
+        </a>
+</p>
 {% endblock %}
