random dinosaur added

--- a/api/templates/tamagosaurus/index.html.twig
+++ b/api/templates/tamagosaurus/index.html.twig
@@ -32,7 +32,7 @@
         </div>
 
         <div class="bg-white p-4 custom-padding neon-effect pt-5">
-            <img class="rounded mx-auto d-block" style="width: 30%;" src="{{ asset('build/images/dinosaures/diplosaure-aquaticus.png') }}" alt="Un mignon Tamagosaurus !"><br>
+            <img class="rounded mx-auto d-block" style="width: 30%;" src="{{ asset( tamagosauru.image ) }}" alt="Un mignon Tamagosaurus !"><br>
         </div>        
 
         <p class="text-success pt-5">Faim : <span id="dino-hunger"></span></p>
