--- a/api/templates/home/eggChoice.html.twig
+++ b/api/templates/home/eggChoice.html.twig
@@ -19,9 +19,9 @@
             </p>
 
             <div class="col-md-12 text-center">
-            {% for i in 1..3 %}
-                <a href="{{ path('app_tamagosaurus_new') }}" class="d-inline-block col-md-3">
-                    <img class="img-fluid d-inline border border-secondary" src ="{{ asset('/build/images/eggs/dinoegg' ~ i ~ '.png') }}">
+            {% for egg in eggs %}
+                <a href="{{ path('app_tamagosaurus_new', { id: egg.id }) }}" class="d-inline-block col-md-3" title="{{ egg.name }}">
+                    <img class="img-fluid d-inline" src ="{{ asset( egg.image ) }}">
                 </a>
             {% endfor %}
             </div>
