--- a/api/templates/tamagosaurus/index.html.twig
+++ b/api/templates/tamagosaurus/index.html.twig
@@ -31,9 +31,7 @@
             {{ tamagosauru.name }}
         </div>
 
-        <div class="bg-white p-4 custom-padding neon-effect pt-5">
-            <img class="rounded mx-auto d-block" style="width: 30%;" src="{{ asset( tamagosauru.image ) }}" alt="Un mignon Tamagosaurus !"><br>
-        </div>        
+        {% include 'tamagosaurus/_dino.html.twig' %}        
 
         <p class="text-success pt-5">Faim : <span id="dino-hunger"></span></p>
         <h2 class="text-success h2">Donnez lui à manger<h2>
